fixed weird shifting on underlined nav icon

--- a/style.css
+++ b/style.css
@@ -38,7 +38,6 @@ body {
 #underlined{
     display: inline-block;
     position: relative;
-    padding: 5px;
 }
 #underlined::after{
     content: '';
